--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -1,2 +1,7 @@
 @import "bootstrap";
 @import "@fortawesome/fontawesome-free/css/all.min.css";
+
+@import "header";
+@import "main";
+@import "footer";
+@import "show";
