--- a/resources/scss/main.scss
+++ b/resources/scss/main.scss
@@ -1,3 +1,65 @@
 body {
     font-family: 'IBM Plex Sans', sans-serif;;
 }
+
+main {
+    .content {
+        position: relative;
+        min-height: 150px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        padding: 20px;
+        justify-content: center;
+        color: white;
+        background-color: #1c1c1c;
+    }
+
+    .cards-comics {
+        display: flex;
+        width: 1200px;
+        flex-wrap: wrap;
+        justify-content: center;
+
+        .card {
+            flex-basis: calc(100% / 6 - 20px);
+            padding: 10px;
+            border: 0px;
+            margin: 15px 0;
+
+            .img-text{
+                color: white;
+                text-decoration: none;
+                width: 100%;
+            }
+        }
+    }
+    .btn-more {
+        background-color: #1382f9;
+        color: white;
+        padding: 10px 30px;
+        border-radius: 5px;
+        cursor: pointer;
+    }
+    .btn-series {
+        position: absolute;
+        background-color: #1382f9;
+        color: white;
+        cursor: pointer;
+        top: -20px;
+        left: 50px;
+        padding: 5px 20px;
+    }
+
+    .card {
+        width: 150px;
+        background-color: #1c1c1c;
+        img {
+            width: 100%;
+            height: 180px;
+            object-fit: cover;
+            padding-bottom: 5px;
+            overflow: hidden;
+        }
+    }
+}
